fix: improve spacing for content

--- a/front/src/app/components/post-card/post-card.component.css
+++ b/front/src/app/components/post-card/post-card.component.css
@@ -8,6 +8,9 @@
 
   .post-info {
     display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
 
     > * {
       flex-basis: 50%;
