--- a/front/src/app/components/topic-card/topic-card.component.css
+++ b/front/src/app/components/topic-card/topic-card.component.css
@@ -13,5 +13,6 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    margin-bottom: 1.5rem;
   }
 }
